log
Thu 09 Mar 2023 03:39:00 PM UTC: 
 tests:  0|7
total_score: 0/70
02ebbab
Thu 09 Mar 2023 03:48:01 PM UTC: 
 tests:  0|7
total_score: 0/70
f08f509
Thu 09 Mar 2023 03:50:22 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|6
total_score: 10/70
4b3eb28
Thu 09 Mar 2023 04:00:02 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
8eb8f67
Thu 09 Mar 2023 04:04:03 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
8030090
Thu 09 Mar 2023 04:12:31 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  3|4
total_score: 30/70
f7689d8
Thu 09 Mar 2023 04:25:29 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:90:11: error: function returns address of local variable [-Werror=return-local-addr]
   90 |    return vectorEstatico;
      |           ^~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2cb53ce
Thu 09 Mar 2023 09:31:31 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:86:5: error: ‘vectorEstatico’ undeclared (first use in this function)
   86 |     vectorEstatico[i].datos =calloc(n,sizeof(int));
      |     ^~~~~~~~~~~~~~
exercises.c:86:5: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:82:10: error: unused variable ‘vector’ [-Werror=unused-variable]
   82 |   Vector vector[n];
      |          ^~~~~~
exercises.c:91:1: error: control reaches end of non-void function [-Werror=return-type]
   91 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3592b8e
